AzureDeveloperCliCredential support added

--- a/index-backup-restore/v11/AzureSearchBackupRestoreIndex/appsettings.json
+++ b/index-backup-restore/v11/AzureSearchBackupRestoreIndex/appsettings.json
@@ -1,9 +1,9 @@
 {
-  "SourceSearchServiceName": "<YourBackupSearchServicName>",
+  "SourceSearchServiceName":  "search-service-ai-prod",
   "SourceAdminKey": "<YourBackupAdminKey>",
-  "SourceIndexName": "<YourBackupIndexName>",
-  "TargetSearchServiceName": "<YourRestoreServiceName>",
+  "SourceIndexName": "index-docs-ai-score-test",
+  "TargetSearchServiceName": "search-service-ai-dev",
   "TargetAdminKey": "<YourRestoreAdminKey>",
-  "TargetIndexName": "<YourRestoreIndexName>",
-  "BackupDirectory": "<YourBackupDirectory>"
+  "TargetIndexName": "index-docs-ai-score-dev-kajetan",
+  "BackupDirectory": "D:\\temp\\index_bak"
 }
