--- a/index-backup-restore/v11/AzureSearchBackupRestoreIndex/AzureSearchBackupRestoreIndex.csproj
+++ b/index-backup-restore/v11/AzureSearchBackupRestoreIndex/AzureSearchBackupRestoreIndex.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Core" Version="1.45.0" />
+    <PackageReference Include="Azure.Identity" Version="1.13.2" />
     <PackageReference Include="Azure.Search.Documents" Version="11.6.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.0" />
