moving credential and token to config setip

--- a/index-backup-restore/v11/AzureSearchBackupRestoreIndex/appsettings.json
+++ b/index-backup-restore/v11/AzureSearchBackupRestoreIndex/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "SourceSearchServiceName":  "search-service-ai-prod",
-  "SourceIndexName": "index-docs-ai-score-test",
+  "SourceSearchServiceName":  "search-service-ai-dev",
+  "SourceIndexName": "index-docs-ai-score-dev-kajetan",
   "TargetSearchServiceName": "search-service-ai-dev",
   "TargetIndexName": "index-docs-ai-score-dev-kajetan-2",
   "BackupDirectory": "D:\\temp\\index_bak"
