BakRestore - ai-dev-archive-task-uml

--- a/index-backup-restore/v11/AzureSearchBackupRestoreIndex/appsettings.json
+++ b/index-backup-restore/v11/AzureSearchBackupRestoreIndex/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "SourceSearchServiceName":  "search-service-ai-dev",
-  "SourceIndexName": "index-docs-ai-score-dev-kajetan",
-  "TargetSearchServiceName": "search-service-ai-dev",
-  "TargetIndexName": "index-docs-ai-score-dev-kajetan-2",
-  "BackupDirectory": "D:\\temp\\index_bak"
+    "SourceSearchServiceName":  "search-service-ai-dev",
+    "SourceIndexName": "index-ai-dev-archive-task-uml-kajetan",
+    "TargetSearchServiceName": "search-service-ai-prod",
+    "TargetIndexName": "index-archive-task-uml-kajetan",
+    "BackupDirectory": "D:\\temp\\index_bak"
 }
